feat: add endpoint to manage users in classroom
