# start/routes.ts
@@ -46,5 +46,16 @@ Route.group(() => {
     Route.delete("/classrooms/:id", "ClassroomsController.destroy")
       .where("id", Route.matchers.uuid())
       .as("destroy");
+
+    // Classroom Users
+    Route.get("/classrooms/:id/users", "ClassroomsController.users").where(
+      "id",
+      Route.matchers.uuid()
+    );
+    Route.post("/classrooms/users", "ClassroomsController.addUser");
+    Route.patch("/classrooms/users", "ClassroomsController.updateUser");
+    Route.delete("/classrooms/users/", "ClassroomsController.removeUser")
+      .where("id", Route.matchers.uuid())
+      .where("userId", Route.matchers.uuid());
   }).middleware("auth");
 }).prefix("v1");
